{
    "name": "GameControls",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "ac2a3e59-9eb4-4581-8d5c-5785bcb7f886",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "ecf975c8-4464-456a-b604-8ba6e4549470",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "AD [Keyboard]",
                    "id": "b6df2781-f2fd-4491-8f02-95af4ff90424",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "59abd1a0-bbb5-4e34-8a20-66dfb9b462d9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1f819a50-5120-4d49-a379-86744c372887",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerTwo",
            "id": "0e7aadb0-24a1-4cf3-a2a9-c264e4960423",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "cd4ad7f2-e1aa-415b-852f-5fdb414c689d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b04588b2-0f3a-43f7-a0b4-a26cfd252f6c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1f8f7d1a-c95c-4569-8656-4ad6ca2211d9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4fff834c-4773-43a2-9dc9-bcf3f21534f9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}